Fixed backdrop size on mobile devices
- Backdrop size was incorrect on mobile devices in movie detail page

--- a/src/app/movies/components/movie-detail/movie-detail.component.scss
+++ b/src/app/movies/components/movie-detail/movie-detail.component.scss
@@ -5,12 +5,14 @@
   overflow: hidden;
 }
 @media only screen and (min-width: 768px) {
+  .movie-detail {
+    height: 100vh;
+  }
   .poster-col {
     border-right: 1px solid #fff;
   }
 }
 .movie-detail {
-  height: 100vh;
   background-size: cover !important;
 }
 .year {
